@@ -1,3 +1,10 @@
+2012-02-28  Jeff Johnston  <jjohnstn@redhat.com>
+
+	Bug #371277
+	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsNewMakeGenerator.java (regenerateMakefiles): Fix
+	setting of status on error.
+	(runScript): Switch to use sh -c for all script execution.
+	
 2012-02-24  Jeff Johnston  <jjohnstn@redhat.com>
 
 	Bug #372557
